fix: unclickable see more on mobile devices

--- a/assets/styles/style.scss
+++ b/assets/styles/style.scss
@@ -4,6 +4,7 @@
 $bg-color: hsl(250, 13%, 18%);
 $font-color: hsl(0, 0%, 100%);
 $amount:4%;
+$transition: cubic-bezier(0.68, -0.55, 0.27, 1.55);
 
 html,
 body,
@@ -164,13 +165,12 @@ li a {
 
 .hide{
 	@media only screen and (max-width: 768px) {
-		animation: float-to-right 0.2s cubic-bezier(0.68, -0.55, 0.27, 1.55)
-		forwards;
+		animation: float-to-right 0.2s $transition forwards;
 	}
 }
 
 .show{
-	animation: float-from-right 0.2s cubic-bezier(0.68, -0.55, 0.27, 1.55)	;
+	animation: float-from-right 0.2s $transition forwards;
 }
 
 @keyframes float-from-right {
@@ -189,6 +189,5 @@ li a {
 
 	100% {
 		transform: translateX(200px);
-		display: none;
 	}
 }
